fixed dropdown appearing behind title

--- a/styles.css
+++ b/styles.css
@@ -17,8 +17,9 @@ body {
   font-weight: bold;
   background-color: white;
   position: fixed;
-  z-index: 2;
+  z-index: 3;
   width: 100%;
+  box-shadow: 0px 2px 5px white;
 }
 
 /* Add a background color to the top navigation */
@@ -32,6 +33,7 @@ body {
 
 .logo {
   margin-left: 3%;
+  margin-top: 0.1%
 }
 
 /* Style the links inside the navigation bar */
@@ -44,6 +46,7 @@ body {
   color: rgb(74, 74, 74);
   font-size: 16px;
   font-family: Helvetica;
+  margin-top: 0.5%;
 }
 
   /* Add a background on topnav links and the dropdown button on hover */
@@ -71,6 +74,7 @@ body {
     /* Dropdown container - needed to position the dropdown content */
     .dropdown {
       overflow: hidden;
+      margin-top: 0.5%;
     }
 
     /* Style the dropdown button to fit inside the topnav */
@@ -94,7 +98,6 @@ body {
       min-width: 160px;
       box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.4);
       z-index: 3;
-
     }
 
     /* Style the links inside the dropdown */
@@ -164,7 +167,7 @@ body {
     color: black;
     font-family: Arial;
     text-align: left;
-    margin-top: 0;
+    margin-top: 0px;
     margin-bottom: 1%;
   }
   #headerTitleSpacer{
@@ -180,7 +183,7 @@ body {
     transform: translate(-50%, -55px);
     z-index: 2;
     box-shadow: 0px 5px 10px black, 0px -1px 10px black;
-    height: 50px;
+    height: 55px;
   }
   #canvasDiv {
     position: fixed;
